--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -188,6 +188,11 @@ li.ctr-day {
 		p {
 			line-height: 1.5em;
 		}
+		p.zoom-info {
+			text-decoration: underline;
+			font-size: 1.2em;
+			margin-bottom: 0.5em;
+		}
 		p.meet-time {
 			font-size: 1.5em;
 			margin-bottom: 0.5em;
