--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -7,8 +7,12 @@
 @import "navigation";
 @import "weekdays";
 @import "footer";
-@import "bingo";
+// @import "bingo";
 @import "msg-one";
+// @import "lat-long";
+// @import "desc-loc";
+// @import "pdf-upload";
+// @import "link-label";
 @import "login";
 @import "manage";
 
