--- a/components/sass/_link-label.scss
+++ b/components/sass/_link-label.scss
@@ -1,6 +1,3 @@
-a#toggle-lat-long-msg,
-a#toggle-descriptive-location,
-a#toggle-pdf-info,
 a#toggle-link-label {
   cursor: pointer;
   color: #5dcb5d;
@@ -8,18 +5,14 @@ a#toggle-link-label {
     color: #fff;
   }
 }
-a#gmaps {
-  color: #fff;
-  text-decoration: underline;
-  &:hover {
-    text-decoration: none;
-  }
-}
+// a#gmaps {
+//   color: #fff;
+//   text-decoration: underline;
+//   &:hover {
+//     text-decoration: none;
+//   }
+// }
 
-#msg-one,
-#lat-long,
-#desc-loc,
-#pdf-upload,
 #link-label {
   cursor: pointer;
   // display: flex;
@@ -155,10 +148,6 @@ a.youtube {
   }
 }
 @media screen and (max-width: 800px) {
-  #msg-one,
-  #lat-long,
-  #desc-loc,
-  #pdf-upload,
   #link-label {
     .msg-bkg {
       justify-content: flex-start;
@@ -188,10 +177,6 @@ a.youtube {
 }
 
 @media screen and (max-width: 390px) {
-  #msg-one,
-  #lat-long,
-  #desc-loc,
-  #pdf-upload,
   #link-label {
     .msg-bkg {
       // padding: 0px;
