--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -676,6 +676,13 @@ form#manage-mtg .details-left {
 		list-style: disc;
 		margin-left: 1em;
 	}
+	ul li.foobgar {
+		background-color: rgba(255,255,255,0.1);
+		color: #fff;
+		padding: 1em;
+		list-style: none;
+		margin: 0.5em 0;
+	}
 }
 
 a.new-mtg-btn {
