--- a/style-expanded.css
+++ b/style-expanded.css
@@ -2540,6 +2540,13 @@ form#manage-mtg .details-left textarea:focus {
   list-style: disc;
   margin-left: 1em;
 }
+.errors ul li.foobgar {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #fff;
+  padding: 1em;
+  list-style: none;
+  margin: 0.5em 0;
+}
 
 a.new-mtg-btn {
   margin: 1em 0;
