really dialed in now!
consolidated error checking into 1 function and put all errors in order with comments out the wazoo.

--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -132,6 +132,7 @@
 			border: 1px solid #fff;
 			transition: all 0.2s ease;
 			margin-top: 0.5em;
+			-webkit-appearance: none;
 			&:hover {
 				background-color: rgba(0,0,0,0.2);
 			}
